overhauling entire program and dockerizing it too

--- a/.env.example
+++ b/.env.example
@@ -11,17 +11,41 @@ CHECK_INTERVAL=60
 LOG_LEVEL=INFO
 
 # =============================================================================
-# Doppler Integration (Optional)
+# Secrets Management (Choose ONE - Optional)
 # =============================================================================
+
+# --- Option 1: Doppler ---
 # If using Doppler for secrets management, set this to your Doppler token
 # When using Doppler, you can leave other secrets empty here
 # DOPPLER_TOKEN=your_doppler_token_here
+
+# --- Option 2: AWS Secrets Manager ---
+# If using AWS Secrets Manager, set these values
+# AWS credentials can be set via AWS CLI, IAM roles, or environment variables
+# AWS_SECRET_NAME=star-daemon/production
+# AWS_REGION=us-east-1
+# AWS_ACCESS_KEY_ID=your_access_key_here  # Optional if using IAM roles
+# AWS_SECRET_ACCESS_KEY=your_secret_key_here  # Optional if using IAM roles
+
+# --- Option 3: HashiCorp Vault ---
+# If using HashiCorp Vault for secrets management
+# VAULT_ADDR=https://vault.example.com:8200
+# VAULT_TOKEN=your_vault_token_here
+# VAULT_SECRET_PATH=secret/data/star-daemon  # KV v2 path
+
+# --- Option 4: Local .env file (default) ---
+# If none of the above are configured, secrets are read from this .env file
 
 # =============================================================================
 # GitHub Configuration
 # =============================================================================
 # GitHub Personal Access Token
-# Scopes needed: repo, user
+# Recommended: use a fine-grained or minimal-scope token.
+# - For public-repo monitoring only: a classic token with `public_repo` is sufficient,
+#   or create a fine-grained token with Repository -> Read-only (Stars/Contents as needed).
+# - For monitoring private repositories or more advanced access: include `repo` scope or
+#   a fine-grained token with the appropriate repository access.
+# Store the token in your secrets manager (Doppler / AWS / Vault) or set it in `.env`.
 GITHUB_ACCESS_TOKEN=your_github_token_here
 
 # Optional: Monitor specific user (defaults to authenticated user)
@@ -63,7 +87,11 @@ DISCORD_ENABLED=false
 # Discord webhook URL
 DISCORD_WEBHOOK_URL=https://discord.com/api/webhooks/your_webhook_url
 
-# Optional: Discord bot token (for richer integration)
+# Optional: Discord role ID to mention (for notifications)
+# Get this by typing \@RoleName in Discord to see the ID
+# DISCORD_ROLE_ID=123456789012345678
+
+# Optional: Discord bot token (for richer integration - not currently used)
 # DISCORD_BOT_TOKEN=your_bot_token_here
 # DISCORD_CHANNEL_ID=your_channel_id_here
 
@@ -90,7 +118,7 @@ MATRIX_ROOM_ID=!your_room_id:matrix.org
 # Message Customization
 # =============================================================================
 # Template for status messages (use {url}, {name}, {description} placeholders)
-MESSAGE_TEMPLATE=I just starred a new repository on GitHub: {url}
+MESSAGE_TEMPLATE=I just starred {name} on GitHub: {url}
 
 # Include repository description in posts (true/false)
 INCLUDE_DESCRIPTION=false
