--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -51,6 +51,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          # Install testing tools
+          pip install pytest
 
       - name: Validate Python syntax
         run: python -m py_compile star-daemon.py config.py connectors/*.py
@@ -59,6 +61,35 @@ jobs:
         run: |
           python -c "import config"
           python -c "from connectors import MastodonConnector, BlueSkyConnector, DiscordConnector, MatrixConnector"
+
+      - name: Validate GitHub token (if provided)
+        # This step will check that a provided token can authenticate to the GitHub API
+        # and can access the /user/starred endpoint. If no token is provided, the step
+        # will skip and tests will run unauthenticated (rate limits apply).
+        env:
+          TOKEN: ${{ secrets.STAR_DAEMON_GITHUB_TOKEN || secrets.GITHUB_ACCESS_TOKEN || secrets.GITHUB_TOKEN }}
+        run: |
+          if [ -z "$TOKEN" ]; then
+            echo "No GitHub token provided in secrets (STAR_DAEMON_GITHUB_TOKEN / GITHUB_ACCESS_TOKEN / GITHUB_TOKEN). Skipping token permission check.";
+            exit 0
+          fi
+          HTTP_STATUS=$(curl -s -o /dev/null -w "%{http_code}" -H "Authorization: token $TOKEN" https://api.github.com/user/starred)
+          if [ "$HTTP_STATUS" -eq 200 ]; then
+            echo "GitHub token validation succeeded (HTTP 200).";
+          else
+            echo "ERROR: GitHub token validation failed (HTTP $HTTP_STATUS). Ensure token is valid and has at least 'public_repo' (classic) or equivalent fine-grained read-only repository access.";
+            exit 1
+          fi
+
+      - name: Run unit tests (if present)
+        run: |
+          # If a tests/ directory or any test_*.py / *_test.py files exist, run pytest.
+          if [ -d tests ] || ls -1 test_*.py *_test.py tests/*.py 2>/dev/null; then
+            echo "Running pytest..."
+            pytest -q
+          else
+            echo "No tests found, skipping pytest"
+          fi
 
   # Commented out: Requires SNYK_TOKEN secret to be configured
   # To enable: Sign up at snyk.io, connect your repo, and add SNYK_TOKEN to GitHub secrets
