Fix linting and CI/CD workflows
- Run black formatter on all Python files
- Fix Docker path in workflows: Docker/Dockerfile -> docker/Dockerfile
- Update workflow references from stream-daemon to star-daemon
- Fix import test in docker-build-publish.yml

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -128,6 +128,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
+          file: ./docker/Dockerfile
           push: false
           tags: star-daemon:test
           cache-from: type=gha
@@ -170,6 +171,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
+          file: ./docker/Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
