Fix pytest smoke test and add linting configs
- Update test_smoke.py to use importlib instead of direct config import
- Add PYTHONPATH=. to pytest run for module resolution
- Create .flake8 config to exclude venv/docker/scripts directories
- Set flake8 line-length=88 to match black
- All local checks now pass (black, isort, flake8, pytest)

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -90,7 +90,7 @@ jobs:
           # If a tests/ directory or any test_*.py / *_test.py files exist, run pytest.
           if [ -d tests ] || ls -1 test_*.py *_test.py tests/*.py 2>/dev/null; then
             echo "Running pytest..."
-            pytest -q
+            PYTHONPATH=. pytest -v
           else
             echo "No tests found, skipping pytest"
           fi
