--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -90,7 +90,7 @@ jobs:
           # If a tests/ directory or any test_*.py / *_test.py files exist, run pytest.
           if [ -d tests ] || ls -1 test_*.py *_test.py tests/*.py 2>/dev/null; then
             echo "Running pytest..."
-            PYTHONPATH=. pytest -v
+            pytest -q
           else
             echo "No tests found, skipping pytest"
           fi
@@ -134,57 +134,16 @@ jobs:
           context: .
           file: ./docker/Dockerfile
           push: false
-          load: true
           tags: star-daemon:test
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
       - name: Test Docker image
         run: |
-          # Test that Python and modules are properly installed
-          docker run --rm star-daemon:test python -c "import sys; print('Python version:', sys.version)"
-          docker run --rm star-daemon:test python -m py_compile star-daemon.py config.py
-          docker run --rm star-daemon:test sh -c "cd connectors && python -m py_compile *.py"
+          docker run --rm star-daemon:test python -c "import config; from connectors import MastodonConnector"
 
-  docker-publish:
-    name: Publish Docker Image
-    runs-on: ubuntu-latest
-    needs: [lint, test, docker-build]
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_TOKEN }}
-
-      - name: Extract metadata
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ secrets.DOCKER_USERNAME }}/star-daemon
-          tags: |
-            type=ref,event=branch
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=sha
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: ./docker/Dockerfile
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+  # Docker publishing is handled by docker-build-publish.yml workflow
+  # which publishes to both GitHub Container Registry (ghcr.io) and Docker Hub
 
   dependency-review:
     name: Dependency Review
