--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,8 @@ LOG_LEVEL=INFO
 # If using Doppler for secrets management, set this to your Doppler token
 # When using Doppler, you can leave other secrets empty here
 # DOPPLER_TOKEN=your_doppler_token_here
+# DOPPLER_PROJECT=star-daemon  # Optional: defaults to 'star-daemon'
+# DOPPLER_CONFIG=prd  # Optional: defaults to 'dev' (use 'prd' for production)
 
 # --- Option 2: AWS Secrets Manager ---
 # If using AWS Secrets Manager, set these values
