--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -90,6 +90,10 @@ jobs:
           # If a tests/ directory or any test_*.py / *_test.py files exist, run pytest.
           if [ -d tests ] || ls -1 test_*.py *_test.py tests/*.py 2>/dev/null; then
             echo "Running pytest..."
+            echo "Current directory: $(pwd)"
+            echo "Directory contents:"
+            ls -la
+            echo "Running: PYTHONPATH=. pytest -v"
             PYTHONPATH=. pytest -v
           else
             echo "No tests found, skipping pytest"
