Fix Docker build in ci-cd.yml: add load: true
- Add load: true to make image available to local Docker daemon
- Fixes 'Unable to find image star-daemon:test locally' error
- Required for the Docker test step to run

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -138,6 +138,7 @@ jobs:
           context: .
           file: ./docker/Dockerfile
           push: false
+          load: true
           tags: star-daemon:test
           cache-from: type=gha
           cache-to: type=gha,mode=max
