--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -146,7 +146,7 @@ jobs:
       - name: Test Docker image
         run: |
           # Test that Python modules are syntactically valid without requiring env vars
-          docker run --rm star-daemon:test python -m py_compile /app/star-daemon.py /app/config.py /app/connectors/*.py
+          docker run --rm star-daemon:test sh -c "python -m py_compile /app/star-daemon.py /app/config.py /app/connectors/*.py"
 
   # Docker publishing is handled by docker-build-publish.yml workflow
   # which publishes to both GitHub Container Registry (ghcr.io) and Docker Hub
